--- a/css/style.css
+++ b/css/style.css
@@ -44,13 +44,12 @@ body {
   
   /* Main marketing message and sign up button */
   .jumbotron {
-    background: linear-gradient(#79c457, #6ef525);
+    background: #e5e5e5;
     text-align: center;
     border-bottom: 1px solid #e5e5e5;
-    color: white;
   }
   .jumbotron:hover{
-      background: #79c457
+      background: #79c457;
       transition: background-color 1s ease-out;
       color: white;
   }
